Thu Aug  8 21:32:22 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (time_overflow_p): Avoid signed integer overflow.

Thu Aug  8 19:58:02 2013  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_threadptr_pending_interrupt_check_mask):
	  use RARRAY_RAWPTR() instead of RARRAY_PTR() because
	  there is no new reference.

Thu Aug  8 19:56:52 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_format_m): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

Thu Aug  8 19:55:51 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: define USE_RGENGC_LOGGING_WB_UNPROTECT.

Thu Aug  8 16:44:25 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: add old macro name `RUBY_EVENT_SWITCH'.
	  This macro name is obsolete because it is renamed to
	  RUBY_INTERNAL_EVENT_SWITCH, but it has compatibility problem
	  using this macro name like ruby-prof.
	  I want to remove this macro after ruby 2.1.

Thu Aug  8 15:37:53 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/coverage/test_coverage.rb (TestCoverage#test_big_code): use `1'
	  instead of `p' to get rid of a side effect.
	  Kernel#p without any argument seems to do nothing, but flushes stdout.
	  and, if stdout is redirected to file, fsync() will be called on
	  Windows.  so, when running test-all on Windows with redirection, such
	  as CI environment, this test took a lot of time.

Thu Aug  8 14:54:18 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add description of incompatibility introduced by r42396.
	  [ruby-core:56329] [Bug #8722]

Thu Aug  8 14:50:36 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (mini): portable target to build miniruby

	* common.mk (bisect): run git-bisect with miniruby

	* common.mk (bisect-ruby): run git-bisect with ruby

	* tool/bisect.sh: script for git-bisect

Thu Aug  8 12:11:43 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_httpresponse.rb (test_send_body_*_chunked): these